force-app/main/default/objects/YS_Signer__c/YS_Signer__c.object-meta.xml
<CustomObject>
    <label>YS Signer</label>
    <nameField>
        <label>YS Signer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>YS Signers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>