force-app/main/default/objects/YS_Signer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Contact Linked to the Signer</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>YS Signers</relationshipLabel>
    <relationshipName>YS_Signers</relationshipName>
    <type>Lookup</type>
</CustomField>