force-app/main/default/objects/YS_Signer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the Signer</description>
    <inlineHelpText>The email of the Signer on the Signature Request. It can differ from the one on the contact linked if the contact was updated.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>