force-app/main/default/objects/YS_Signer__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>First Name of the Signer</description>
    <inlineHelpText>The first name of the Signer on the Signature Request. It can differ from the one on the contact linked if the contact was updated.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>