force-app/main/default/objects/YS_Signer__c/fields/LastEventDate__c.field-meta.xml
<CustomField>
    <fullName>LastEventDate__c</fullName>
    <description>Last date when a webhook event triggered an event. Used to avoid erasing data with retried messages</description>
    <label>Last Event Date</label>
    <type>DateTime</type>
</CustomField>