force-app/main/default/objects/YS_Signer__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Last Name of the Signer</description>
    <inlineHelpText>The last name of the Signer on the Signature Request. It can differ from the one on the contact linked if the contact was updated.</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>