force-app/main/default/objects/YS_Signer__c/fields/NotifiedDatetime__c.field-meta.xml
<CustomField>
    <fullName>NotifiedDatetime__c</fullName>
    <description>Date when the signer was notified</description>
    <label>Notified Datetime</label>
    <type>DateTime</type>
</CustomField>