force-app/main/default/objects/YS_Signer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number of the Signer</description>
    <inlineHelpText>Must be in E.164 format</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>