force-app/main/default/objects/YS_Signer__c/fields/SignatureAuthenticationMode__c.field-meta.xml
<CustomField>
    <fullName>SignatureAuthenticationMode__c</fullName>
    <description>Authentification Mode for the Signer (OTP=One Time Password)</description>
    <label>Signature Authentication Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no_otp</fullName>
                <label>No OTP</label>
            </value>
            <value>
                <fullName>otp_email</fullName>
                <label>Email OTP</label>
            </value>
            <value>
                <fullName>otp_sms</fullName>
                <label>SMS OTP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>