force-app/main/default/objects/YS_Signer__c/fields/SignatureLevel__c.field-meta.xml
<CustomField>
    <fullName>SignatureLevel__c</fullName>
    <description>Signature Level of the Signer</description>
    <label>Signature Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>electronic_signature</fullName>
                <label>SES</label>
            </value>
            <value>
                <fullName>advanced_electronic_signature</fullName>
                <label>AES</label>
            </value>
            <value>
                <fullName>electronic_signature_with_qualified_certificate</fullName>
                <label>ESQC</label>
            </value>
            <value>
                <fullName>qualified_electronic_signature</fullName>
                <label>QES</label>
            </value>
            <value>
                <fullName>qualified_electronic_signature_mode_1</fullName>
                <label>QES (by Swisscom)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>