force-app/main/default/objects/YS_Signer__c/fields/SignatureRequest__c.field-meta.xml
<CustomField>
    <fullName>SignatureRequest__c</fullName>
    <description>Signature Request that the Signer is linked to</description>
    <label>Signature Request</label>
    <referenceTo>YS_SignatureRequest__c</referenceTo>
    <relationshipLabel>YS Signers</relationshipLabel>
    <relationshipName>YS_Signers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>