force-app/main/default/objects/YS_Signer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Signature Status of the Signer</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>initiated</fullName>
                <label>Initiated</label>
            </value>
            <value>
                <fullName>declined</fullName>
                <label>Declined</label>
            </value>
            <value>
                <fullName>notified</fullName>
                <label>Notified</label>
            </value>
            <value>
                <fullName>verified</fullName>
                <label>Verified</label>
            </value>
            <value>
                <fullName>processing</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>consent_given</fullName>
                <label>Consent Given</label>
            </value>
            <value>
                <fullName>signed</fullName>
                <label>Signed</label>
            </value>
            <value>
                <fullName>aborted</fullName>
                <label>Aborted</label>
            </value>
            <value>
                <fullName>error</fullName>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>